# daton-esg

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  render-start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260406_0001_initial_schema.py  20260409_0002_document_parsing_payloads.py  20260410_0003_document_extractions.py  20260410_0004_expand_project_status_stages.py  20260413_0005_documents_drive_refactor.py  20260413_0006_project_rag_indexing.py  20260413_0007_agent_chat_threads.py  20260413_0008_langgraph_chat_threads.py  20260413_0009_reference_data_tables.py  20260413_0010_seed_reference_data.py  20260414_0011_report_status_failed_and_constraints.py  20260414_0011a_add_failed_enum_value.py  20260414_0012_composite_chat_fk_and_captacao_fk.py  20260416_0013_add_indicator_values_to_projects.py  20260416_0014_indicator_catalog_v2.py  20260416_0015_backfill_materiality_and_indicator_values.py  20260417_0016_extraction_runs_and_suggestions.py
backend/app/: main.py
backend/app/api/: auth.py  data.py  documents.py  extraction.py  generation.py  knowledge.py  projects.py  reference_data.py  reports.py
backend/app/core/: __init__.py  config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  agent_chat_message.py  agent_chat_thread.py  captacao_row.py  document.py  document_extraction.py  document_rag_chunk.py  enums.py  extraction_run.py  extraction_suggestion.py  gri_standard.py  indicator_template.py  ods_goal.py  project.py  report.py  user.py
backend/app/schemas/: __init__.py  agent_chat.py  auth.py  document.py  extraction.py  knowledge.py  project.py  reference_data.py  report.py
backend/app/services/: __init__.py  classification_service.py  data_extraction_service.py  document_directories.py  document_service.py  docx_export_service.py  embedding_service.py  extraction_service.py  framework_reference_ingestion.py  langgraph_chat_graph.py  langgraph_chat_service.py  langgraph_report_graph.py  project_service.py  rag_ingestion_service.py  rag_retrieval_service.py  report_inline_gap_classifier.py  report_pipeline.py  report_sections.py  report_service.py  section_agent_profiles.py  sse_utils.py  storage_service.py  text_extraction_service.py  vector_store.py  vocabulary_linter.py
backend/scripts/: extract_reference_seed.py  ingest_gri_standards.py  seed_dev_data.py
backend/tests/test_api/: test_auth.py  test_documents.py  test_extraction.py  test_generation.py  test_health.py  test_knowledge.py  test_projects.py  test_reference_data_api.py  test_reports.py
backend/tests/test_services/: test_document_service.py  test_docx_export_service.py  test_evidence_grouping.py  test_extraction_service.py  test_framework_reference.py  test_indicator_catalog_v2.py  test_langgraph_report_graph.py  test_parsing.py  test_project_service.py  test_reference_data.py  test_report_pipeline.py  (+3 more)
(+71 files in other folders)
